--- a/animation-activity/activity.css
+++ b/animation-activity/activity.css
@@ -1,21 +1,30 @@
 .hamburger:hover > div:nth-child(1){
   background-color: ghostwhite;
   animation-name: top;
-  animation-duration: 1s;
+  animation-duration: 2s;
   animation-fill-mode: forwards;
+  transform: rotate(45deg)
+  translate(23px, 23px)
 }
 
 .hamburger:hover > div:nth-child(2){
   animation-name: middle;
-  animation-duration: .1s;
+  animation-duration: 2s;
   animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+.hamburger {
+  opacity: 1;
 }
 
 .hamburger:hover > div:nth-child(3){
   background-color: ghostwhite;
   animation-name: bottom;
-  animation-duration: 1s;
+  animation-duration: 2s;
   animation-fill-mode: forwards;
+  transform: rotate(-45deg)
+  translate(23px, -23px)
 }
 
 nav {
